--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "deprecated-react-native-listview": "0.0.6",
+    "deprecated-react-native-swipeable-listview": "0.0.1",
     "expo": "~37.0.3",
+    "expo-facebook": "~8.1.0",
     "firebase": "^7.14.5",
+    "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
