--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
     "import"
   ],
   "rules": {
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": 0
   },
   "parser": "babel-eslint"
 }
