--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@use-expo/font": "^2.0.0",
     "deprecated-react-native-listview": "0.0.6",
     "deprecated-react-native-swipeable-listview": "0.0.1",
     "expo": "~37.0.3",
     "expo-facebook": "~8.1.0",
+    "expo-font": "^8.1.1",
     "firebase": "^7.14.5",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
