--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@use-expo/font": "^2.0.0",
     "deprecated-react-native-listview": "0.0.6",
     "deprecated-react-native-swipeable-listview": "0.0.1",
