アイコン解決

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@use-expo/font": "^2.0.0",
     "deprecated-react-native-listview": "0.0.6",
     "deprecated-react-native-swipeable-listview": "0.0.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "expo": "~37.0.3",
-    "expo-font": "^8.1.1",
+    "expo-font": "~8.1.0",
     "firebase": "^7.9.0",
+    "mem": "^6.0.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -33,7 +36,6 @@
     "@babel/core": "^7.8.6",
     "babel-eslint": "^10.1.0",
     "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.1.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
